--- a/frontend/timer_frontend.service
+++ b/frontend/timer_frontend.service
@@ -3,8 +3,9 @@ Description=Slot Car Timer Frontend
 After=slot_timer
 
 [Service]
-WorkingDirectory=/home/pi
-ExecStart=/home/pi/app.py
+WorkingDirectory=/home/pi/FrontEnd
+ExecStart=/home/pi/FrontEnd/app.py
+User=pi
 
 [Install]
 WantedBy=multi-user.target
