--- a/web_frontend/package.json
+++ b/web_frontend/package.json
@@ -11,41 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.1",
-    "@angular/cdk": "^11.1.1",
-    "@angular/common": "~11.1.1",
-    "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^11.1.2",
+    "@angular/compiler": "^11.1.2",
+    "@angular/core": "^11.1.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.1.1",
-    "@angular/material": "^11.1.1",
-    "@angular/platform-browser": "~11.1.1",
-    "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "~11.1.1",
-    "@swimlane/ngx-charts": "^17.0.0",
-    "@types/socket.io-client": "^1.4.35",
-    "rxjs": "~6.6.0",
-    "socket.io-client": "^3.1.1",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/forms": "^11.1.2",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "^11.1.2",
+    "@angular/platform-browser-dynamic": "^11.1.2",
+    "@angular/router": "^11.1.2",
+    "@swimlane/ngx-charts": "^17.0.1",
+    "@types/socket.io-client": "^1.4.36",
+    "mat-sidenav-menu": "^0.10.1",
+    "rxjs": "^6.6.7",
+    "socket.io-client": "^3.1.3",
+    "tslib": "^2.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^0.1101.4",
+    "@angular/cli": "^11.1.4",
+    "@angular/compiler-cli": "^11.1.2",
+    "@types/jasmine": "^3.6.11",
+    "@types/node": "^12.20.15",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "^4.1.5"
   }
 }
