--- a/update/timer_update.service
+++ b/update/timer_update.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Slot Car Timer Upgrade Check
 After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=oneshot
