--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,10 @@
         "cov.xml",
         "coverage.xml",
         "jacoco.xml"
-    ]
+    ],
+    "python.testing.pytestArgs": [
+        "backend"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
