--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,15 @@
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}/frontend",
             "args": ["--target_ip", "192.168.1.2", "--windowed"]
+        },
+        {
+            "name": "Launch backend",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/backend/app.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/backend",
+            "args": ["--target_ip", "192.168.1.2", "--windowed"]
         }
     ]
 }
