Update service files on change

--- a/update/timer_update.service
+++ b/update/timer_update.service
@@ -9,6 +9,7 @@ WorkingDirectory=/home/pi/SlotRacr
 ExecStart=/home/pi/SlotRacr/update/update.sh
 RemainAfterExit=yes
 User=pi
+StandardOutput=journal+console
 
 [Install]
 WantedBy=multi-user.target
