Only play background sounds when real race is running

--- a/station/station.service
+++ b/station/station.service
@@ -5,6 +5,7 @@ Description=Slot Car Station Service
 WorkingDirectory=/home/slotracr/station
 Environment=PYTHONUNBUFFERED=1
 ExecStart=/home/slotracr/station/station.py
+KillSignal=SIGINT
 
 [Install]
 WantedBy=multi-user.target
